--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,6 @@ dependencies:
   firebase_auth: ^0.18.0+1
   google_sign_in: ^4.5.3
   modal_progress_hud: ^0.1.3
-  image_picker: ^0.6.7+11
   firebase_storage: ^4.0.0
   firebase_core: ^0.5.0
   form_field_validator:
@@ -34,6 +33,9 @@ dependencies:
   firebase_auth_web: ^0.3.2
   cloud_firestore: ^0.14.3
   agora_rtc_engine: ^3.2.1
+  image_picker: ^0.6.7+22
+  #agora_flutter_webrtc: ^0.0.3
+
 
 dev_dependencies:
   flutter_test:
