--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,8 @@ dependencies:
   firebase_auth_web: ^0.3.2
   cloud_firestore: ^0.14.3
   agora_rtc_engine: ^3.2.1
-  image_picker: ^0.6.7+22
-  #agora_flutter_webrtc: ^0.0.3
+  image_picker:
+  agora_flutter_webrtc:
 
 
 dev_dependencies:
