--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   jitsi_meet:
   shared_preferences:
   loading_indicator: ^2.0.1
+  excel: ^1.1.5
+  flutter_link_previewer:
 
 
 dev_dependencies:
